@@ -1,3 +1,9 @@
+globus-gridftp-server (8.9-1+gt6.@distro@) @distro@; urgency=low
+
+  * home dir is always / when shared chroot
+
+ -- Globus Toolkit <support@globus.org>  Mon, 28 Sep 2015 17:31:52 -0500
+
 globus-gridftp-server (8.8-1+gt6.@distro@) @distro@; urgency=low
 
   * Update internal home dir when DSI supplies one
